# petri_to_automata

./: .gitignore  Cargo.toml  PhiloProblem.ndr  PhiloProblem.smv  auto.smv  autom.smv  automata.smv  automata3.smv  automate1.smv  automate2.smv  automate3.smv  automaton.smv  buffer.ndr  command.ndr  command.smv  exemple.ndr  exemple.smv  flake.nix  g.dot  gr.dot  graph.dot  graph2.dot  grf.dot  net.petri  net1.ndr  net2.ndr  net3.ndr  output.dot  petri.json  petrie.json  petrie.smv  prodCons.ndr  prodCons.smv  shell.nix  test.ndr  test.smv
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 03yfdhqinp989rzv72a1yzzxp04h55ww-source  6r7br0cv0700mk5aga5lya9ah9zq6xgs-source  789vzmd2lz94xkavc53shgl3h9gfwfhm-source  g73mn5bj4llin0xb6lpq32c381z5xhys-source  kpcl02rjxbslj1nrcscdij4i76ybvf95-source
backend/: Cargo.toml
backend/src/: graph_gen.rs  lib.rs  ndr_parser.rs  output_generators.rs  parser.pest
backend/src/petri_parser/: parser.rs
doc/: crates.js  help.html  search-index.js  settings.html  source-files.js
doc/anstream/: trait.RawStream.html
doc/anyhow/: struct.Error.html
doc/clap/: enum.ArgAction.html  struct.Id.html
doc/clap_builder/: enum.ArgAction.html  (+3 more)
nativeui_frontend/: Cargo.toml
nativeui_frontend/src/: main.rs
src/: error_type.rs  graph_gen.rs  lib.rs  main.rs  ndr_parser.rs  output_generators.rs  parser.pest  petri_parser.rs
tauri_gui/: package-lock.json  package.json
terminal_frontend/: Cargo.toml
terminal_frontend/src/: main.rs
(+1005 files in other folders)
