[package]
name = "petri_to_automata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
thiserror = "1.0"
serde_json = "1.0"
clap = {version = "4.0", features = ["derive"]}
graphviz-rust = "0.6.2"