[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
anyhow = "1.0"
serde_json = "1.0"
graphviz-rust = "0.6.2"
iter_tools = "0.1.4"
pest = "2.6"
pest_derive = "2.6"
