[package]
name = "nativeui_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backend = { path = "../backend" }
image = { version = "0.24", features = ["png", "jpeg"] }
egui = "0.22"
eframe = "0.22"
