[package]
name = "terminal_frontend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
backend = { path = "../backend" }
clap = { version = "4.0", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0"
open = "5.0"
